better css, added credits, fixed text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ a {
 .Arts {
   display: flex;
   margin-top: 8px;
-  margin-right: 8px
+  margin-right: 8px;
 }
 
 .Art {
@@ -21,21 +21,22 @@ a {
 
 .galleryPiece {
   width: 100%;
-  max-height: 800px;
+  max-height: 570px;
+  object-fit: contain;
 }
 
 .header {
   color: black;
   position: absolute;
   bottom: 2px;
-  left: 20px
+  left: 20px;
 }
 
 .about {
   color: #ff4400;
   position: absolute;
   right: 30px;
-  bottom: 15px;
+  bottom: 5px;
   margin-top: 8px;
   font-weight: 800;
 }
@@ -52,6 +53,29 @@ a {
   position: absolute;
   right: 20px;
   font-style: italic;
+  margin-left: 20px;
+  text-align: right;
+}
+
+.credit {
+  color: red;
+  font-style: none;
+  position: absolute;
+  bottom: 22px;
+  right: 20px;
+  display: inline-block;
+}
+
+.website {
+  text-decoration: none;
+  color: red;
+  border: 2px solid white;
+  padding: 5px;
+}
+
+.website:hover {
+  color: white;
+  background-color: blue;
 }
 
 h1 {
@@ -82,10 +106,13 @@ h2 {
   padding: 20px;
   background-color: white;
   border: 2px solid black;
+  min-width: 400px;
+  max-height: 250px;
+  overflow: auto;
 }
 
 #artTitle {
-  font-size: 3vw;
+  font-size: 2.5vw;
 }
 
 #artTitle:hover {
@@ -93,11 +120,11 @@ h2 {
 }
 
 #artTitle:active {
-  transform: none
+  transform: none;
 }
 
 #artist {
-  font-size: 2vw;
+  font-size: 1.5vw;
   font-style: none;
 }
 
@@ -111,11 +138,17 @@ h2 {
   margin-top: 150px;
   margin-left: 100px;
   padding-bottom: 130px;
+  max-height: 100%;
+}
+
+.singleImage:hover {
+  cursor: default;
 }
 
 .singleDisplay {
-  max-height: 500px;
+  height: auto;
   display: flex;
+  justify-content: center;
 }
 
 #artHeader {
@@ -123,5 +156,18 @@ h2 {
   border: 2px solid black;
   padding: 2px;
   bottom: 0px;
-  left: 15px
+  left: 15px;
+}
+
+#artHeader:hover {
+  color: red;
+}
+
+
+
+@media (hover: none) {
+  .about:hover { color: inherit; };
+  .website:hover { color: inherit; };
+  h1:hover { color: inherit; };
+  #artTitle:hover { color: inherit; };
 }
